--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-scikit-learn
 streamlit_option_menu==0.3.2
-streamlit==1.7.0
+numpy==1.21.5
+pandas==1.4.4
+scikit-learn
+streamlit
+streamlit_option_menu==0.3.2
